# Ischemic_Stroke_Prediction

./: .gitignore  CTDataModule.py  README.md  analyze_predict.ipynb  analyze_predict_2.ipynb  attention_visual.ipynb  neural_network.py  pyproject.toml  training_script.py
OTHER/: ECG_lab_copy.ipynb  ecg_lab.py
lightning_logs/version_0/: events.out.tfevents.1675848671.d11-ai02.85843.0
lightning_logs/version_1/: events.out.tfevents.1675848911.d11-ai02.86854.0
lightning_logs/version_10/: events.out.tfevents.1675954279.d11-ai02.486504.0
lightning_logs/version_11/: events.out.tfevents.1675954361.d11-ai02.487152.0
lightning_logs/version_12/: events.out.tfevents.1676021451.d11-ai02.630372.0
lightning_logs/version_13/: events.out.tfevents.1676022390.d11-ai02.658147.0
lightning_logs/version_14/: events.out.tfevents.1676022582.d11-ai02.659010.0
lightning_logs/version_15/: events.out.tfevents.1676023642.d11-ai02.743066.0
lightning_logs/version_16/: events.out.tfevents.1676024120.d11-ai02.744861.0
lightning_logs/version_17/: events.out.tfevents.1676025488.d11-ai02.802086.0
lightning_logs/version_18/: events.out.tfevents.1676048343.d11-ai02.966069.0
poetry_no_gpu/: pyproject.toml
scenarios/: ard_training.py  futher_training.py  predict_with_labels.py  test_get_metrics.py  testing_scenario.py  training_scenario.py
src/: CTDataModule.py  dicom_datamodule.py  image_transforms.py  neural_network.py  neural_network_ard.py  predict.py  predictions.py  test_dicom.ipynb  test_transforms.py  training_script.py  utils.py
src/dicom_process/: dicom_datamodule.py  (+1 more)
(+33 files in other folders)
