[tool.poetry]
name = "stroke-prediction"
version = "0.1.0"
description = ""
authors = ["Olga Lipina"]
readme = "README.md"
packages = [{include = "stroke_prediction"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
jupyterlab = "^3.5.0"
pytorch-lightning = "^1.8.1"
opencv-python = "^4.6.0.66"
tensorflow = "^2.10.0"
seaborn = "^0.12.1"
sklearn = "^0.0.post1"
scikit-learn = "^1.1.3"
torchvision = "^0.14.1"
click = "^8.1.3"
torch = "^1.13.1"
ipywidgets = "^8.0.6"
scikit-image = "^0.20.0"
plotly = "^5.14.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pylint = "^2.16.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
